# api-docs.yaml
@@ -289,7 +289,7 @@ paths:
             text/html:
               schema:
                 type: string
-                example: HTML content for the Chef interface
+                example: HTML content for the chef interface
         "400":
           description: The server cannot understand the request due to a syntax error or invalid data from the client
         "404":
@@ -587,6 +587,155 @@ paths:
           schema:
             type: string
             example: 6609431c63278e5b966308d5
+      requestBody:
+        description: Information of passwords
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Employee-Passwords"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/Employee-Passwords"
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 0
+                  message:
+                    type: string
+                    example: Change password successfully
+        "400":
+          description: The server cannot understand the request due to a syntax error or invalid data from the client
+        "404":
+          description: The requested resource could not be found on the server
+        "500":
+          description: An undefined server error occurred while processing the request
+
+  /waiter-manager:
+    post:
+      tags:
+        - Waiter/Manager
+      summary: Waiter and Manager user interface
+      description: Waiter and Manager accesses the waiter/manager user interface
+      parameters:
+        - name: token
+          in: query
+          description: Waiter/Manager's token
+          required: true
+          schema:
+            type: string
+            example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbXBsb3llZUlkIjoiTTAwMSIsIm5hbWUiOiJOYW0gUGhhdCIsInJvbGUiOiJtYW5hZ2VyIiwiZW1haWwiOiJkYW5jYW11MTAwMkBnbWFpbC5jb20iLCJpYXQiOjE3MTM1ODY2NjAsImV4cCI6MTcxMzYwODI2MH0.oM9YEJDhIBaGddvYzUYqyj2fG1PBTGXmd5Kgxxatxuw
+      requestBody:
+        description: Information of waiter or manager
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Employee-Information"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/Employee-Information"
+      responses:
+        "200":
+          description: Successful response
+          content:
+            text/html:
+              schema:
+                type: string
+                example: HTML content for the waiter/manager interface
+        "400":
+          description: The server cannot understand the request due to a syntax error or invalid data from the client
+        "404":
+          description: The requested resource could not be found on the server
+        "500":
+          description: An undefined server error occurred while processing the request
+
+  /waiter-manager/login:
+    post:
+      tags:
+        - Waiter/Manager
+      summary: Login
+      description: Waiter and Manager login
+      requestBody:
+        description: Information of waiter or manager
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Employee-Information"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/Employee-Information"
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 0
+                  message:
+                    type: string
+                    example: Login success
+                  token:
+                    type: string
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbXBsb3llZUlkIjoiTTAwMSIsIm5hbWUiOiJOYW0gUGhhdCIsInJvbGUiOiJtYW5hZ2VyIiwiZW1haWwiOiJkYW5jYW11MTAwMkBnbWFpbC5jb20iLCJpYXQiOjE3MTM1ODY2NjAsImV4cCI6MTcxMzYwODI2MH0.oM9YEJDhIBaGddvYzUYqyj2fG1PBTGXmd5Kgxxatxuw
+        "400":
+          description: The server cannot understand the request due to a syntax error or invalid data from the client
+        "404":
+          description: The requested resource could not be found on the server
+        "500":
+          description: An undefined server error occurred while processing the request
+
+  /waiter-manager/logout:
+    get:
+      tags:
+        - Waiter/Manager
+      summary: Logout
+      description: Waiter and Manager logout
+      responses:
+        "200":
+          description: Successful response
+          content:
+            text/html:
+              schema:
+                type: string
+                example: Redirect to HTML content for the Home page
+        "400":
+          description: The server cannot understand the request due to a syntax error or invalid data from the client
+        "404":
+          description: The requested resource could not be found on the server
+        "500":
+          description: An undefined server error occurred while processing the request
+
+  /waiter-manager/change-password:
+    post:
+      tags:
+        - Waiter/Manager
+      summary: Change Password
+      description: Waiter and Manager change account password
+      parameters:
+        - name: token
+          in: query
+          description: Waiter/Manager's token
+          required: true
+          schema:
+            type: string
+            example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbXBsb3llZUlkIjoiTTAwMSIsIm5hbWUiOiJOYW0gUGhhdCIsInJvbGUiOiJtYW5hZ2VyIiwiZW1haWwiOiJkYW5jYW11MTAwMkBnbWFpbC5jb20iLCJpYXQiOjE3MTM1ODY2NjAsImV4cCI6MTcxMzYwODI2MH0.oM9YEJDhIBaGddvYzUYqyj2fG1PBTGXmd5Kgxxatxuw
+        - name: id
+          in: query
+          description: Id of employee account
+          required: true
+          schema:
+            type: string
+            example: 660942e963278e5b966308d3
       requestBody:
         description: Information of passwords
         content:
